--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ nav ul {
 
 nav a {
     text-decoration: none;
-    color: #4c3c32;
+    color: #b5e2aa;
     font-weight: bold;
     transition: color 0.3s;
 }
