--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,16 @@ body {
 header {
     background-color: #47341c;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+ 
     padding: 20px;
 }
+.image-container {
+    width: 300px; /* Adjust the width as needed */
+    height: 200px; /* Adjust the height as needed */
+    background-image: url('inter.jpg'); /* Replace 'image.jpg' with your image file path */
+    background-size: cover;
+  }
+  
 
 nav {
     display: flex;
